--- a/.github/workflows/ci-tierra-connect.yml
+++ b/.github/workflows/ci-tierra-connect.yml
@@ -1,12 +1,22 @@
-name: CI TierraConnect (placeholder)
+name: CI TierraConnect
 
 on:
   push:
-    branches: ["main"]
+    branches: [ "main" ]
 
 jobs:
-  placeholder:
+  build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout del código
         uses: actions/checkout@v4
+
+      - name: Configurar Java 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: "temurin"
+          java-version: "21"
+
+      - name: Compilar proyecto con Maven
+        run: mvn -B clean package
